syntax = "proto3";
option go_package = "openmyth/messgener/pb/chat";
package chat;

import "google/api/annotations.proto";
// import "validate/validate.proto";

service MessageService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);

  rpc GetMessageListChannel(GetMessageListChannelRequest)
      returns (GetMessageListChannelResponse) {
    option (google.api.http) = {
      post : "/v1/channels/{channel_id}/messages"
      body : "*"
    };
  };
}

message Message {
  int64 channel_id = 1;
  int64 message_id = 2;
  string user_id = 3;
  string content = 4;
  repeated string reaction = 5;
}

message SendMessageRequest {
  int64 channel_id = 1;
  string content = 2;
  string user_id = 3;
}

message SendMessageResponse { int64 message_id = 1; }

message GetMessageListChannelRequest {
  int64 channel_id = 1;
  int64 offset = 2;
  int64 limit = 3;
}

message GetMessageListChannelResponse { repeated Message messages = 1; }